修改注释，web端过滤用户可以模型